Fleshed out a wrapper system for motor controllers.

--- a/RobotCode/src/main/deploy/www/buildinfo.html
+++ b/RobotCode/src/main/deploy/www/buildinfo.html
@@ -3,7 +3,7 @@
 <head><link rel="stylesheet" href="main.css"></head>
 <tr><td>Build Username     </td><td> chris  </td></tr>
 <tr><td>Build Host PC      </td><td> DESKTOP-KPBTBSS   </td></tr>
-<tr><td>Build Time         </td><td> 01-15-2022 04:18:07PM   </td></tr>
+<tr><td>Build Time         </td><td> 01-16-2022 07:40:12AM   </td></tr>
 <tr><td>Git Tags           </td><td> unknown </td></tr>
 <tr><td>Git Branch         </td><td> unknown   </td></tr>
 <tr><td>Git SHA1           </td><td> unknown     </td></tr>
