--- a/RobotCode/src/main/deploy/www/stripchart/stripchart.html
+++ b/RobotCode/src/main/deploy/www/stripchart/stripchart.html
@@ -56,7 +56,9 @@
                 <div id="daqStatus" class="statusDisp">
                 </div>
             </buttonGroup>
-
+            <buttonGroup class="outlined">
+                <button id="showSigList" type="button" onclick="handleSignalShowHide()">Signals</button>
+            </buttonGroup>
         </buttonsContainer>
 
 
