driver camera on dashboard, shooter spoolup icons better

--- a/RobotCode/src/main/deploy/www/index.html
+++ b/RobotCode/src/main/deploy/www/index.html
@@ -16,6 +16,7 @@
         <linksBox  class="outlined">
         
             <a class="bigLinkButton" href="/dashboard/dashboard.html">Driver Dashboard</a> <br>
+            <a class="bigLinkButton" href="/cameras/cameras.html">Cameras</a> <br>
             <a class="bigLinkButton" href="/stripchart/stripchart.html">Strip Charts</a> <br>
             <a class="bigLinkButton" href="/calibration/calibration.html">Calibration</a> <br>
             <a class="bigLinkButton" href="/logs/logs.html">Data Logs</a> <br>
